--- a/ac-backend/.pre-commit-config.yaml
+++ b/ac-backend/.pre-commit-config.yaml
@@ -15,21 +15,14 @@ repos:
     rev: 25.1.0
     hooks:
       - id: black
-#  - repo: https://github.com/pre-commit/mirrors-mypy
-#    rev: v1.16.1  # Use the sha / tag you want to point at
+
+#  - repo: local
 #    hooks:
 #      - id: mypy
-#        args: [--strict, --ignore-missing-imports, --explicit-package-bases]
-  - repo: local
-    hooks:
-      - id: mypy
-        name: mypy
-        entry: "./ac-backend/run-mypy"
-        # mypy --python-executable flag to point to our python interpreter
-        # language: system
-        language: python
-        types: [ python ]
-        # use require_serial so that script
-        # is only called once per commit
-        require_serial: true
-        #args: [src, --strict, -v]
+#        name: mypy
+#        entry: "./ac-backend/run-mypy"
+#        language: python
+#        types: [ python ]
+#        # use require_serial so that script
+#        # is only called once per commit
+#        require_serial: true
