--- a/ac-backend/.pre-commit-config.yaml
+++ b/ac-backend/.pre-commit-config.yaml
@@ -11,10 +11,10 @@ repos:
       - id: ruff-check
         args: [ --fix ]
       - id: ruff-format
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-      - id: black
+#  - repo: https://github.com/psf/black
+#    rev: 25.1.0
+#    hooks:
+#      - id: black
 
 #  - repo: local
 #    hooks:
