--- a/podman/compose.yml
+++ b/podman/compose.yml
@@ -14,7 +14,10 @@ services:
 
     volumes:
       - database:/var/lib/postgresql/data/
-
+  redis:
+    image: docker.io/redis:latest
+    ports:
+      - "${REDIS_PORT}:6379"
 networks:
   ac:
 
