--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "aiocache[redis]>=0.12.3",
     "aiofiles>=24.1.0",
+    "aiohttp>=3.12.13",
     "alembic>=1.16.1",
+    "astropy>=7.1.0",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
     "mypy>=1.16.1",
