feat: tess & kepler plugin integration

--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -9,8 +9,10 @@ dependencies = [
     "aiohttp>=3.12.13",
     "alembic>=1.16.1",
     "astropy>=7.1.0",
+    "astroquery>=0.4.10",
     "asyncpg>=0.30.0",
     "fastapi>=0.115.12",
+    "lightkurve>=2.5.1",
     "mypy>=1.16.1",
     "pre-commit>=4.2.0",
     "pydantic-settings>=2.9.1",
