--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "mypy>=1.16.1",
     "pre-commit>=4.2.0",
     "pydantic-settings>=2.9.1",
+    "pyvo>=1.7",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
