feat: add celery support for running plugins in background

--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.13",
     "alembic>=1.16.1",
+    "asgiref>=3.9.1",
     "astropy>=7.1.0",
     "astroquery>=0.4.10",
+    "asyncio>=3.4.3",
     "asyncpg>=0.30.0",
+    "celery>=5.5.3",
     "fastapi>=0.115.12",
     "lightkurve>=2.5.1",
     "mypy>=1.16.1",
