--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -14,16 +14,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.130.2",
     "@tanstack/router-plugin": "^1.121.2",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.536.0",
+    "plotly.js": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
+    "react-plotly.js": "^2.6.0",
+    "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
+    "tw-animate-css": "^1.3.6",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -32,6 +41,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-plotly.js": "^2.6.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
