--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.84.0",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.130.2",
     "@tanstack/router-plugin": "^1.121.2",
