--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.84.0",
@@ -28,13 +31,14 @@
     "plotly.js": "^3.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.62.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
