feat: add deployment setup

--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "beautifulsoup4>=4.13.4",
     "celery>=5.5.3",
-    "fastapi>=0.115.12",
+    "fastapi[standard]>=0.115.12",
     "lightkurve>=2.5.1",
     "mypy>=1.16.1",
     "pre-commit>=4.2.0",
