--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.130.2",
     "@tanstack/router-plugin": "^1.121.2",
+    "@types/plotly.js": "^3.0.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
