--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
     "plotly.js": "^3.0.3",
+    "plotly.js-dist-min": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
@@ -47,6 +48,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^24.2.0",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-plotly.js": "^2.6.3",
