--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.13",
     "alembic>=1.16.1",
+    "apscheduler>=3.11.0",
     "asgiref>=3.9.1",
     "astropy>=7.1.0",
     "astroquery>=0.4.10",
