--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.0.6",
@@ -24,6 +25,7 @@
     "@tanstack/react-query-devtools": "^5.84.1",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.130.2",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.121.2",
     "@types/plotly.js": "^3.0.3",
     "axios": "^1.11.0",
