--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -32,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
+    "next-themes": "^0.4.6",
     "plotly.js": "^3.0.3",
     "plotly.js-dist-min": "^3.1.0",
     "react": "^19.0.0",
@@ -39,6 +41,7 @@
     "react-hook-form": "^7.62.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^3.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6",
