--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -36,6 +36,7 @@
     "next-themes": "^0.4.6",
     "plotly.js": "^3.0.3",
     "plotly.js-dist-min": "^3.1.0",
+    "plotly.js-locales": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
