--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
     "vitest": "^3.0.5",
