--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-query-devtools": "^5.84.1",
