--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -41,6 +41,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-loading-indicators": "^1.0.1",
     "react-plotly.js": "^2.6.0",
     "recharts": "^3.1.0",
     "sonner": "^2.0.7",
