--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -19,8 +19,10 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "lightkurve>=2.5.1",
     "mypy>=1.16.1",
+    "passlib[bcrypt]>=1.7.4",
     "pre-commit>=4.2.0",
     "pydantic-settings>=2.9.1",
+    "pyjwt>=2.10.1",
     "pyvo>=1.7",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
