--- a/ac-frontend/package.json
+++ b/ac-frontend/package.json
@@ -31,6 +31,7 @@
     "@tanstack/router-plugin": "^1.121.2",
     "@types/plotly.js": "^3.0.3",
     "axios": "^1.11.0",
+    "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
