change: move admin account credentials to .env

--- a/ac-backend/.env.example
+++ b/ac-backend/.env.example
@@ -1,2 +1,4 @@
 APPLAUSE_TOKEN=putyourtokenhere
 SECRET_KEY=putyoursecrethere
+SUPER_ADMIN_EMAIL=putsuperadminemailhere
+SUPER_ADMIN_PASSWORD=putsuperadminpwdhere
