change: mount logs to a server directory

--- a/deployment/compose.yml
+++ b/deployment/compose.yml
@@ -40,6 +40,9 @@ services:
       database:
         condition: service_healthy
 
+    volumes:
+      - "${SERVER_LOGS_DIRECTORY}:/app/logs"
+
   frontend:
     build:
       context: ../ac-frontend
