feat: setup celery

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -1,14 +1,20 @@
 # rename this file to .env
-# configure your DB
+# configure your app
 
 POSTGRES_HOST=database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb
 POSTGRES_PORT=5432
+
+REDIS_HOST=redis
 REDIS_PORT=6379
+
 API_PORT=8082
 WEB_PORT=3002
 
-# change to true if deploying for production
-PRODUCTION=false
+DEBUG=false
+PRODUCTION=true
+
+# ensure that the directory exists on the server!
+SERVER_LOGS_DIRECTORY="."
