--- a/deployment/compose.yml
+++ b/deployment/compose.yml
@@ -18,20 +18,22 @@ services:
 
   redis:
     image: docker.io/redis:latest
+    networks:
+      - ac
 
   api:
     build:
       context: ../ac-backend
-      args:
-        PRODUCTION: ${PRODUCTION}
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
+      REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
     container_name: ac-api
+    command: ["/app/entrypoint.sh"]
     ports:
       - "${API_PORT}:8082"
     networks:
@@ -41,7 +43,44 @@ services:
         condition: service_healthy
 
     volumes:
+      - plugins:/app/plugins  # the celery worker needs to access the plugin scripts directory
       - "${SERVER_LOGS_DIRECTORY}:/app/logs"
+
+  celery_worker:
+    build:
+      context: ../ac-backend
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+    command: [ "celery", "-A", "src.core.celery.worker", "worker" ]
+    depends_on:
+      - redis
+    networks:
+      - ac
+    volumes:
+      - plugins:/app/plugins:ro
+
+  celery_beat:
+    build:
+      context: ../ac-backend
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+    command: [ "celery", "-A", "src.core.celery.worker", "beat" ]
+    depends_on:
+      - redis
+    networks:
+      - ac
 
   frontend:
     build:
@@ -62,3 +101,4 @@ networks:
 
 volumes:
   database:
+  plugins:
