--- a/ac-backend/Dockerfile
+++ b/ac-backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.13-slim
+FROM python:3.13-slim AS astrocollector
 
 # Install uv.
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
@@ -12,4 +12,4 @@ RUN uv sync --frozen --no-cache
 ENV PATH="/app/.venv/bin:$PATH"
 
 RUN chmod +x /app/entrypoint.sh
-CMD ["/app/entrypoint.sh"]
+#CMD ["/app/entrypoint.sh"]
