--- a/dev/.env.example
+++ b/dev/.env.example
@@ -6,4 +6,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb
 POSTGRES_PORT=5432
+
+REDIS_HOST=localhost
 REDIS_PORT=6379
