--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -8,26 +8,18 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-
     networks:
       - ac
-
     volumes:
+      # mounts a named volume so that data survives restart
       - database:/var/lib/postgresql/data/
   redis:
     image: docker.io/redis:latest
     ports:
       - "${REDIS_PORT}:6379"
 
-  #worker:
-    #command: celery -A worker.celery worker --loglevel=info --logfile=logs/celery.log
-    #volumes:
-      #- celery:/usr/src/app
-    #depends_on:
-      #- redis
 networks:
   ac:
 
 volumes:
-  #celery:
   database:
