--- a/production/.env.example
+++ b/production/.env.example
@@ -1,10 +1,16 @@
 # rename this file to .env
-# configure your DB
+# configure your app
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb
 POSTGRES_PORT=5433
+
+REDIS_HOST=redis
 REDIS_PORT=6379
+
 API_PORT=8082
 WEB_PORT=3002
+
+PRODUCTION=true
+DEBUG=true
