--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -4,23 +4,22 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
-    "aiocache[redis]>=0.12.3",
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.13",
     "alembic>=1.16.1",
-    "apscheduler>=3.11.0",
-    "asgiref>=3.9.1",
     "astropy>=7.1.0",
     "astroquery>=0.4.10",
     "asyncio>=3.4.3",
     "asyncpg>=0.30.0",
     "beautifulsoup4>=4.13.4",
-    "celery>=5.5.3",
+    "celery[redis]>=5.5.3",
     "fastapi[standard]>=0.115.12",
+    "httpx>=0.28.1",
     "lightkurve>=2.5.1",
     "mypy>=1.16.1",
     "passlib[bcrypt]>=1.7.4",
     "pre-commit>=4.2.0",
+    "psycopg[binary]>=3.2.10",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
     "pyvo>=1.7",
