--- a/deployment/compose.yml
+++ b/deployment/compose.yml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: docker.io/postgres:latest
+    image: docker.io/postgres:17
     container_name: ac-database
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -17,7 +17,7 @@ services:
       - database:/var/lib/postgresql/data/
 
   redis:
-    image: docker.io/redis:latest
+    image: docker.io/redis:8
     networks:
       - ac
 
