feat: add resources directory env variable

--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -18,3 +18,6 @@ PRODUCTION=true
 
 # ensure that the directory exists on the server!
 SERVER_LOGS_DIRECTORY="."
+
+# ensure that the directory exists on the server!
+RESOURCES_DIRECTORY="."
