--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "asgi-lifespan>=2.1.0",
+    "pytest-asyncio>=1.3.0",
     "types-aiofiles>=24.1.0.20250606",
     "types-requests>=2.32.4.20250611",
 ]
