--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "psycopg[binary]>=3.2.10",
     "pydantic-settings>=2.9.1",
     "pyjwt>=2.10.1",
+    "pytest>=9.0.1",
     "pyvo>=1.7",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
@@ -30,9 +31,15 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "asgi-lifespan>=2.1.0",
+    "pytest-asyncio>=1.3.0",
     "types-aiofiles>=24.1.0.20250606",
     "types-requests>=2.32.4.20250611",
 ]
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
