change: [BE] introduce session-based authentication

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -1,5 +1,6 @@
 # rename this file to .env
 # configure your DB
+PRODUCTION=false
 
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
@@ -7,5 +8,8 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb
 POSTGRES_PORT=5432
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_BROKER_HOST=localhost
+REDIS_BROKER_PORT=6379
+
+REDIS_DB_HOST=localhost
+REDIS_DB_PORT=6380
