--- a/ac-backend/pyproject.toml
+++ b/ac-backend/pyproject.toml
@@ -21,9 +21,9 @@ dependencies = [
     "pre-commit>=4.2.0",
     "psycopg[binary]>=3.2.10",
     "pydantic-settings>=2.9.1",
-    "pyjwt>=2.10.1",
     "pytest>=9.0.1",
     "pyvo>=1.7",
+    "redis>=5.2.1",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
