--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: docker.io/postgres:latest
+    image: docker.io/postgres:17
     container_name: ac-database
     ports:
       - "${POSTGRES_PORT}:5432"
@@ -13,10 +13,14 @@ services:
     volumes:
       # mounts a named volume so that data survives restart
       - database:/var/lib/postgresql/data/
-  redis:
-    image: docker.io/redis:latest
+  redis-broker:
+    image: docker.io/redis:8
     ports:
-      - "${REDIS_PORT}:6379"
+      - "${REDIS_BROKER_PORT}:6379"
+  redis-database:
+    image: docker.io/redis:8
+    ports:
+      - "${REDIS_DB_PORT}:6379"
 
 networks:
   ac:
