--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -7,13 +7,15 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb
 POSTGRES_PORT=5432
 
-REDIS_HOST=redis
-REDIS_PORT=6379
+REDIS_BROKER_HOST=localhost
+REDIS_BROKER_PORT=6379
+
+REDIS_DB_HOST=localhost
+REDIS_DB_PORT=6380
 
 API_PORT=8082
 WEB_PORT=3002
 
-DEBUG=false
 PRODUCTION=true
 
 # ensure that the directory exists on the server!
