--- a/deployment/compose.yml
+++ b/deployment/compose.yml
@@ -16,10 +16,14 @@ services:
     volumes:
       - database:/var/lib/postgresql/data/
 
-  redis:
+  redis-broker:
     image: docker.io/redis:8
-    networks:
-      - ac
+    ports:
+      - "${REDIS_BROKER_PORT}:6379"
+  redis-database:
+    image: docker.io/redis:8
+    ports:
+      - "${REDIS_DB_PORT}:6379"
 
   api:
     build:
