change: adjust compose and .env

--- a/ac-backend/.env.example
+++ b/ac-backend/.env.example
@@ -1,3 +1,6 @@
+# APPLAUSE star survey (catalog) token
 APPLAUSE_TOKEN=putyourtokenhere
+# the super admin email
 SUPER_ADMIN_EMAIL=putsuperadminemailhere
+# the super admin password
 SUPER_ADMIN_PASSWORD=putsuperadminpwdhere
