--- a/ac-backend/tests/services/.env.example
+++ b/ac-backend/tests/services/.env.example
@@ -1,14 +1,15 @@
 # Just rename this file to .env; no changes needed
-POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=astrocollectordb_test
 POSTGRES_PORT=5433
 
-REDIS_HOST=localhost
-REDIS_PORT=6380
+REDIS_BROKER_HOST=localhost
+REDIS_BROKER_PORT=6379
+
+REDIS_DB_HOST=localhost
+REDIS_DB_PORT=6380
 
 APPLAUSE_TOKEN=putyourtokenhere
-SECRET_KEY=putyoursecrethere
 SUPER_ADMIN_EMAIL=putsuperadminemailhere
 SUPER_ADMIN_PASSWORD=putsuperadminpwdhere
