--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -1,25 +1,41 @@
 # rename this file to .env
-# configure your app
 
+# --- PostgreSQL config ---
+# where the DB server runs. IP address or the container name
 POSTGRES_HOST=database
+# DB username
 POSTGRES_USER=postgres
+# DB password
 POSTGRES_PASSWORD=postgres
+# name of the DB
 POSTGRES_DB=astrocollectordb
+# the postgres port. Do not change.
 POSTGRES_PORT=5432
 
-REDIS_BROKER_HOST=localhost
+# --- Celery broker config ---
+# where the Redis broker server runs. IP address or the container name
+REDIS_BROKER_HOST=redis-broker
+# the exposed redis broker port
 REDIS_BROKER_PORT=6379
 
-REDIS_DB_HOST=localhost
+# --- Redis in-memory DB config ---
+# where the Redis in-memory DB server runs. IP address or the container name
+REDIS_DB_HOST=redis-database
+# the exposed redis in-memory DB port
 REDIS_DB_PORT=6380
 
+# API exposed port. Must be same as the port the reverse proxy forwards to.
 API_PORT=8082
+# Frontend exposed port. Must be same as the port the proxy server forwards to.
 WEB_PORT=3002
 
+# flag for production
 PRODUCTION=true
 
+# path to the logs directory on the server
 # ensure that the directory exists on the server!
 SERVER_LOGS_DIRECTORY="."
 
+# path to the resources directory on the server
 # ensure that the directory exists on the server!
 RESOURCES_DIRECTORY="."
