--- a/dev/.env.example
+++ b/dev/.env.example
@@ -1,15 +1,25 @@
 # rename this file to .env
-# configure your DB
+
+# flag for production
 PRODUCTION=false
 
+# where the DB server runs. IP address or the container name
 POSTGRES_HOST=localhost
+# DB username
 POSTGRES_USER=postgres
+# DB password
 POSTGRES_PASSWORD=postgres
+# name of the DB
 POSTGRES_DB=astrocollectordb
+# the postgres port. Do not change.
 POSTGRES_PORT=5432
 
+# where the Redis broker server runs. IP address or the container name
 REDIS_BROKER_HOST=localhost
+# the exposed redis broker port
 REDIS_BROKER_PORT=6379
 
+# where the Redis in-memory DB server runs. IP address or the container name
 REDIS_DB_HOST=localhost
+# the exposed redis in-memory DB port
 REDIS_DB_PORT=6380
