feat: add atlas plugin

--- a/ac-backend/.env.example
+++ b/ac-backend/.env.example
@@ -1,5 +1,7 @@
 # APPLAUSE star survey (catalog) token
 APPLAUSE_TOKEN=putyourtokenhere
+# ATLAS star survey (catalog) token
+ATLAS_TOKEN=putyourtokenhere
 # the super admin email
 SUPER_ADMIN_EMAIL=putsuperadminemailhere
 # the super admin password
