--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -15,14 +15,14 @@ POSTGRES_PORT=5432
 # --- Celery broker config ---
 # where the Redis broker server runs. IP address or the container name
 REDIS_BROKER_HOST=redis-broker
-# the exposed redis broker port
+# the redis broker port
 REDIS_BROKER_PORT=6379
 
 # --- Redis in-memory DB config ---
 # where the Redis in-memory DB server runs. IP address or the container name
 REDIS_DB_HOST=redis-database
-# the exposed redis in-memory DB port
-REDIS_DB_PORT=6380
+# the redis in-memory DB port
+REDIS_DB_PORT=6379
 
 # API exposed port. Must be same as the port the reverse proxy forwards to.
 API_PORT=8082
